force-app/main/default/objects/MDF_Expense_Detail__c/MDF_Expense_Detail__c.object-meta.xml
<CustomObject>
    <label>MDF Expense Detail</label>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>MDF Expense Detail Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>MDF Expenses Detail</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>