force-app/main/default/objects/MDF_Expense_Detail__c/fields/Actual_Cost__c.field-meta.xml
<CustomField>
    <fullName>Actual_Cost__c</fullName>
    <label>Actual Cost (Based on POP)</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>