force-app/main/default/objects/MDF_Expense_Detail__c/fields/Actvity__c.field-meta.xml
<CustomField>
    <fullName>Actvity__c</fullName>
    <description>This is the sub type of the activity specified in the Activity field of MDF Request.</description>
    <label>Activity Line Item</label>
    <length>255</length>
    <type>Text</type>
</CustomField>