force-app/main/default/objects/MDF_Expense_Detail__c/fields/Fund_Claim__c.field-meta.xml
<CustomField>
    <fullName>Fund_Claim__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Fund Claim to which expense detail record is associated.</description>
    <label>Fund Claim</label>
    <referenceTo>SFDC_MDF_Claim__c</referenceTo>
    <relationshipLabel>MDF Expenses Detail</relationshipLabel>
    <relationshipName>MDF_Expenses_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>