force-app/main/default/objects/MDF_Expense_Detail__c/fields/MDF_Request__c.field-meta.xml
<CustomField>
    <fullName>MDF_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>MDF Request</label>
    <referenceTo>SFDC_MDF__c</referenceTo>
    <relationshipLabel>MDF Expenses Detail</relationshipLabel>
    <relationshipName>MDF_Expenses_Detail</relationshipName>
    <type>Lookup</type>
</CustomField>