force-app/main/default/objects/MDF_Expense_Detail__c/fields/NCR_Approved__c.field-meta.xml
<CustomField>
    <fullName>NCR_Approved__c</fullName>
    <label>NCR Approved</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>