force-app/main/default/objects/MDF_Expense_Detail__c/fields/NCR_Estimated_Participation__c.field-meta.xml
<CustomField>
    <fullName>NCR_Estimated_Participation__c</fullName>
    <label>Approved Reimbursement Limit</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>