force-app/main/default/objects/MDF_Expense_Detail__c/validationRules/Validate_Approved_Reimbursement_Limit.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_Approved_Reimbursement_Limit</fullName>
    <active>true</active>
    <description>Validate Approved Reimbursement Limit</description>
    <errorConditionFormula>Estimated_Cost__c  &lt;  NCR_Estimated_Participation__c</errorConditionFormula>
    <errorDisplayField>NCR_Estimated_Participation__c</errorDisplayField>
    <errorMessage>Approved Reimbursement Limit should not be greater than Estimated Cost.</errorMessage>
</ValidationRule>