force-app/main/default/objects/MDF_Expense_Detail__c/validationRules/Validate_NCR_Approved_Amount.validationRule-meta.xml
<ValidationRule>
    <fullName>Validate_NCR_Approved_Amount</fullName>
    <active>true</active>
    <errorConditionFormula>Estimated_Cost__c &lt;  NCR_Approved__c</errorConditionFormula>
    <errorMessage>NCR Approved amount can not be greater than Estimated Cost.</errorMessage>
</ValidationRule>