force-app/main/default/objects/MDF_Expense_Detail__c/listViews/Channel_Operation_Team_MDF_Expense_Detail.listView-meta.xml
<ListView>
    <fullName>Channel_Operation_Team_MDF_Expense_Detail</fullName>
    <filterScope>Queue</filterScope>
    <label>Channel Operation Team</label>
    <queue>Channel_Operation_Team</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>